--- a/app/src/main/res/layout/todo_item_layout.xml
+++ b/app/src/main/res/layout/todo_item_layout.xml
@@ -9,11 +9,12 @@
         android:id="@+id/imgEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/checkTask"
-        app:layout_constraintEnd_toEndOf="@+id/checkTask"
-        app:layout_constraintHorizontal_bias="0.955"
-        app:layout_constraintStart_toStartOf="@+id/checkTask"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkTask"
         app:layout_constraintTop_toTopOf="@+id/checkTask"
         app:srcCompat="@drawable/ic_baseline_edit_24" />
 
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="72dp"
         android:layout_marginBottom="24dp"
         android:text="CheckBox"
         app:layout_constraintBottom_toBottomOf="parent"
