--- a/app/src/main/res/layout/fragment_edit_todo.xml
+++ b/app/src/main/res/layout/fragment_edit_todo.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    <layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools" >
+    <data>
+        <variable name="todo" type="com.ubaya.todoapp.model.Todo" />
+        <variable name="radioListener" type="com.ubaya.todoapp.view.RadioClick" />
+        <variable name="listener" type="com.ubaya.todoapp.view.TodoSaveChangesClick" />
+    </data>
+
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.CreateTodoFragment">
@@ -46,6 +53,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtTitle"
                 android:layout_width="match_parent"
+                android:text="@={todo.title}"
                 android:layout_height="wrap_content"
                 android:hint="Enter Todo Title" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,6 +80,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtNotes"
                 android:layout_width="match_parent"
+                android:text="@={todo.notes}"
                 android:layout_height="wrap_content"
                 android:hint="Enter Notes" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -85,6 +94,7 @@
             android:layout_marginBottom="376dp"
             android:text="ADD TODO"
             app:cornerRadius="25dp"
+            android:onClick="@{(view)->listener.onTodoSaveChangesClick(view,todo)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
@@ -115,7 +125,8 @@
                 android:id="@+id/radioHigh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:checked="@{todo.priority==3?true:false}"
+                android:onClick="@{(view)->radioListener.onRadioClick(view, 3, todo)}"
                 android:tag="3"
                 android:text="High Priority" />
 
@@ -123,6 +134,8 @@
                 android:id="@+id/radioMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="@{todo.priority==2?true:false}"
+                android:onClick="@{(view)->radioListener.onRadioClick(view, 2, todo)}"
                 android:tag="2"
                 android:text="Medium Priority" />
 
@@ -130,8 +143,11 @@
                 android:id="@+id/radioLow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="@{todo.priority==1?true:false}"
+                android:onClick="@{(view)->radioListener.onRadioClick(view, 1, todo)}"
                 android:tag="1"
                 android:text="Low Priority" />
         </RadioGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
+    </layout>
