--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/todoListFragment">
     <fragment
         android:id="@+id/todoListFragment"
-        android:name="com.ubaya.todoapp.View.TodoListFragment"
+        android:name="com.ubaya.todoapp.view.TodoListFragment"
         android:label="fragment_todo_list"
         tools:layout="@layout/fragment_todo_list" >
         <action
@@ -24,12 +24,12 @@
     </fragment>
     <fragment
         android:id="@+id/createTodoFragment"
-        android:name="com.ubaya.todoapp.View.CreateTodoFragment"
+        android:name="com.ubaya.todoapp.view.CreateTodoFragment"
         android:label="fragment_create_todo"
         tools:layout="@layout/fragment_create_todo" />
     <fragment
         android:id="@+id/editTodoFragment"
-        android:name="com.ubaya.todoapp.View.EditTodoFragment"
+        android:name="com.ubaya.todoapp.view.EditTodoFragment"
         android:label="fragment_edit_todo"
         tools:layout="@layout/fragment_edit_todo" >
         <argument
